# bagpipe-bgp

./: .project  .pydevproject  LICENSE  README.exabgp  README.md  README.rst  install_bagpipe_bgp.sh  requirements.txt  setup.cfg  setup.py
bagpipe/bgp/: __init__.py  bgp_daemon.py  constants.py  fakerr.py  rest_api.py  rest_api.py.orig
bagpipe/bgp/api/: api.py  controllers.py
bagpipe/bgp/cli/: __init__.py  impex2dot.py  looking_glass.py  rest_attach.py
bagpipe/bgp/common/: __init__.py  config.py  constants.py  exceptions.py  logDecorator.py  log_decorator.py  looking_glass.py  net_utils.py  rootwrap_command.py  run_command.py  utils.py
bagpipe/bgp/engine/: __init__.py  bgp_manager.py  bgp_peer_worker.py  exa.py  exabgp_peer_worker.py  flowspec.py  ipvpn.py  route_table_manager.py  rt_record.py  tracker_worker.py  upstream_exabgp_peer_worker.py  worker.py
bagpipe/bgp/tests/: __init__.py  test_bgp_manager.py  test_engine_objects.py  test_ipvpn_objects.py  test_route_table_manager.py  test_tracker_worker.py  test_vpn_instance.py  test_vpn_manager.py
bagpipe/bgp/vpn/: __init__.py  dataplane_drivers.py  label_allocator.py  manager.py  rd_allocator.py  vpn_instance.py
bagpipe/bgp/vpn/evpn/: __init__.py  linux_vxlan.py
bagpipe/bgp/vpn/ipvpn/: __init__.py  __init__.py--allgood  __init__.py.orig  mpls_linux_dataplane.py  mpls_ovs_dataplane.py
bagpipe/exabgp/: application.py  configuration.py  daemon.py  debug.py  processes.py
bagpipe/exabgp/message/: keepalive.py  nop.py  notification.py  open.py
bagpipe/exabgp/message/update/: __init__.py  attributes.py  eor.py  flow.py  route.py
bagpipe/exabgp/message/update/attribute/: __init__.py  aspath.py  communities.py  labels.py  localpref.py  med.py  mprnlri.py  mpurnlri.py  nexthop.py  origin.py  originator_id.py  pmsi_tunnel.py
bagpipe/exabgp/network/: connection.py  peer.py  protocol.py
bagpipe/exabgp/rib/: delta.py
bagpipe/exabgp/structure/: evpn.py  ip.py  neighbor.py  rtc.py  vpn.py
config/: bgp.conf.template  log.conf.console-template  log.conf.console-warning-template  log.conf.debug-template  log.conf.template  log.conf.warning-template
devstack/: plugin.sh  settings
etc/: rootwrap.conf
etc/bagpipe-bgp/rootwrap.d/: linux-vxlan.filters  mpls-ovs-dataplane.filters
etc/init.d/: bagpipe-bgp  bagpipe-fakerr
etc/systemd/system/: bagpipe-bgp.service
exabgp/lib/exabgp/message/: notification.py
exabgp/lib/exabgp/message/update/: __init__.py
exabgp/lib/exabgp/message/update/attribute/: localpref.py  med.py  nexthop.py  origin.py  originator_id.py
exabgp/lib/exabgp/network/: connection.py  protocol.py
exabgp/lib/exabgp/structure/: address.py  rtc.py
exabgp/message/update/: attributes.py
exabgp/message/update/attribute/: aspath.py  id.py
exabgp/structure/: mpls.py  vpn.py
examples/: basic  chain-example1  chain-example1bis  chain-example2  chain-example3  chain-redirect-lb  chain-redirect-lb2  chain-traffic-redirect  evpn2ipvpn  examples.md  generic-functions  setup-cross-routing  setup-cross-routing-per-interface
samples/: gobgp.conf
src/bagpipe/bgp/: bgp_daemon.py  fakerr.py  rest_api.py
src/bagpipe/bgp/common/: __init__.py  exceptions.py  looking_glass.py  run_command.py  utils.py
src/bagpipe/bgp/engine/: __init__.py  bgp_peer_worker.py  exabgp_peer_worker.py  route_table_manager.py  tracker_worker.py
src/bagpipe/bgp/tests/: __init__.py  test_route_table_manager.py  test_tracker_worker.py  test_vpn_instance.py
src/bagpipe/bgp/vpn/: __init__.py  dataplane_drivers.py  label_allocator.py  vpn_instance.py
src/bagpipe/bgp/vpn/evpn/: __init__.py  linux_vxlan.py
src/bagpipe/bgp/vpn/ipvpn/: __init__.py  mpls_linux_dataplane.py  mpls_ovs_dataplane.py
src/exabgp/message/update/attribute/: communities.py  labels.py  mprnlri.py  pmsi_tunnel.py
src/exabgp/structure/: evpn.py  ip.py  vpn.py
