[metadata]
name = bagpipe-bgp
version = 1.90
summary = Lightweight implementation of BGP IP VPN and E-VPN
description-file = README.md
author = Orange Labs
author-email = thomas.morin@orange.com
maintainer = Thomas MORIN
home-page = https://github.com/Orange-OpenSource/bagpipe-bgp
license = Apache-2
classifier =
    Environment :: No Input/Output (Daemon)
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    bagpipe
data_files =
    /etc/bagpipe-bgp =
        config/bgp.conf.template
        config/log.conf.template
    /etc/init.d =
        etc/init.d/bagpipe-bgp
        etc/init.d/bagpipe-fakerr

[entry_points]
console_scripts =
    bagpipe-bgp = bagpipe.bgp.bgp_daemon:daemon_main
    bagpipe-bgp-cleanup = bagpipe.bgp.bgp_daemon:cleanup_main
    bagpipe-looking-glass = bagpipe.bgp.cli.looking_glass:main
    bagpipe-rest-attach = bagpipe.bgp.cli.rest_attach:main
    bagpipe-fakerr = bagpipe.bgp.fakerr:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
	
