[metadata]
name = bagpipe-bgp
version = 1.90
summary = Lightweight implementation of BGP IP VPN and E-VPN
description-file = README.rst
author = Orange Labs
author-email = thomas.morin@orange.com
maintainer = Thomas MORIN
home-page = https://github.com/Orange-OpenSource/bagpipe-bgp
license = Apache-2
classifier =
    Environment :: No Input/Output (Daemon)
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    bagpipe
data_files =
    /etc/bagpipe-bgp =
        config/bgp.conf.template
        etc/rootwrap.conf
    /etc/bagpipe-bgp/rootwrap.d =
        etc/bagpipe-bgp/rootwrap.d/mpls-ovs-dataplane.filters
        etc/bagpipe-bgp/rootwrap.d/linux-vxlan.filters
    /etc/init.d =
        etc/init.d/bagpipe-fakerr
    /etc/systemd/system =
        etc/systemd/system/bagpipe-bgp.service

[entry_points]
console_scripts =
    bagpipe-bgp = bagpipe.bgp.bgp_daemon:daemon_main
    bagpipe-bgp-cleanup = bagpipe.bgp.bgp_daemon:cleanup_main
    bagpipe-looking-glass = bagpipe.bgp.cli.looking_glass:main
    bagpipe-rest-attach = bagpipe.bgp.cli.rest_attach:main
    bagpipe-impex2dot = bagpipe.bgp.cli.impex2dot:main
    bagpipe-fakerr = bagpipe.bgp.fakerr:main
bagpipe.dataplane.evpn =
    dummy = bagpipe.bgp.vpn.evpn:DummyDataplaneDriver
    linux = bagpipe.bgp.vpn.evpn.linux_vxlan:LinuxVXLANDataplaneDriver
#for backward compatibility with old configs:
    DummyDataplaneDriver = bagpipe.bgp.vpn.evpn:DummyDataplaneDriver
    linux_vxlan.LinuxVXLANDataplaneDriver = bagpipe.bgp.vpn.evpn.linux_vxlan:LinuxVXLANDataplaneDriver
    bagpipe.bgp.vpn.evpn.DummyDataplaneDriver = bagpipe.bgp.vpn.evpn:DummyDataplaneDriver
    bagpipe.bgp.vpn.evpn.linux_vxlan.LinuxVXLANDataplaneDriver = bagpipe.bgp.vpn.evpn.linux_vxlan:LinuxVXLANDataplaneDriver
bagpipe.dataplane.ipvpn =
    dummy = bagpipe.bgp.vpn.ipvpn:DummyDataplaneDriver
    linux = bagpipe.bgp.vpn.ipvpn.mpls_linux_dataplane:MPLSLinuxDataplaneDriver
    ovs = bagpipe.bgp.vpn.ipvpn.mpls_ovs_dataplane:MPLSOVSDataplaneDriver
#for backward compatibility with old configs:
    DummyDataplaneDriver = bagpipe.bgp.vpn.ipvpn:DummyDataplaneDriver
    mpls_linux_dataplane.MPLSLinuxDataplaneDriver = bagpipe.bgp.vpn.ipvpn.mpls_linux_dataplane:MPLSLinuxDataplaneDriver
    mpls_ovs_dataplane.MPLSOVSDataplaneDriver = bagpipe.bgp.vpn.ipvpn.mpls_ovs_dataplane:MPLSOVSDataplaneDriver
    bagpipe.bgp.vpn.ipvpn.DummyDataplaneDriver = bagpipe.bgp.vpn.ipvpn:DummyDataplaneDriver
    bagpipe.bgp.vpn.ipvpn.mpls_linux_dataplane.MPLSLinuxDataplaneDriver = bagpipe.bgp.vpn.ipvpn.mpls_linux_dataplane:MPLSLinuxDataplaneDriver
    bagpipe.bgp.vpn.ipvpn.mpls_ovs_dataplane.MPLSOVSDataplaneDriver = bagpipe.bgp.vpn.ipvpn.mpls_ovs_dataplane:MPLSOVSDataplaneDriver

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
